# python-imdb-bot

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  COOLIFY_OPTIMIZATION_GUIDE.md  DEPLOYMENT.md  Dockerfile  RATING_SYSTEM_INTEGRATION.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  docker-entrypoint.sh  example.env  main.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml
src/python_imdb_bot/: health.py  logging_config.py  main.py  models.py  rewrite.py  utils.py  views.py
supabase/: config.toml
supabase/migrations/: 20250912080303_initial_schema.sql  20250912080304_add_ratings_table.sql  20250912080305_update_rating_range.sql  20250912080306_add_trailer_url.sql
