[project]
name = "python-imdb-bot"
version = "0.1.0"
description = "Production-ready Discord IMDB bot with reaction-based ratings"
authors = [
    {name = "Ali Fani", email = "alifani1377@gmail.com"},
]
dependencies = [
    "discord.py>=2.4.0",
    "supabase>=2.8.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "aiohttp>=3.10.0",
    "asyncio>=3.4.3",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "uvloop>=0.20.0; sys_platform != 'win32'",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "redis>=5.0.0",
    "cachetools>=5.3.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
imdb-bot = "src.python_imdb_bot.rewrite"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.5",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "S104", "COM812", "ISC001"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["discord.*"]
ignore_missing_imports = true
