[project]
name = "python-imdb-bot"
version = "0.1.0"
description = "Production-ready Discord IMDB bot with reaction-based ratings"
authors = [
    {name = "Ali Fani", email = "alifani1377@gmail.com"},
]
dependencies = [
    "discord.py>=2.4.0",
    "supabase>=2.8.0",
    "pydantic>=2.9.0",
    "aiohttp>=3.10.0",
    "asyncio>=3.4.3",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "uvloop>=0.20.0; sys_platform != 'win32'",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "redis>=5.0.0",
    "cachetools>=5.3.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
